welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:7: error: value nbPas is not a member of Unit
possible cause: maybe a semicolon is missing before `value nbPas'?
} nbPas = nbPas + 1
  ^