welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbPas:Int = 0
for ( nbPas <- 1 to 320){
if (!estFaceMur) {
	avance();
	
} nbPas = nbPas + 1
else {
		gauche()
		
		
	}
}
